// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<Fragment>
  <DashboardSearchInput
    searchQuery={null}
  />
  <div
    className="top-margin"
  >
    <DashboardTrending />
  </div>
</Fragment>
`;

exports[`matches snapshot with searchQuery 1`] = `
<Fragment>
  <DashboardSearchInput
    searchQuery="test/search"
  />
  <div
    className="top-margin"
  >
    <DashboardSearchResult
      searchQuery="test/search"
    />
  </div>
</Fragment>
`;
